--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 restarttime = 01:00
 voicechannel = 
-textchannel = 
+textchannel = 601291369415180298
 
 before_alert = 1
 before_alert1 = 5
