--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
 restarttime = 01:00
-voicechannel = 
+voicechannel = 601290825862873113
 textchannel = 601291369415180298
 
 before_alert = 1
